# server-trojan-r

./: .gitignore  CLAUDE.md  Cargo.toml  Cross.toml  LICENSE  Makefile  README.md  acl-o.yaml
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  release.yml
docs/: 2026-03-05-connection-accumulation-investigation.md
docs/plans/: 2026-01-30-layered-architecture-design.md
docs/superpowers/plans/: 2026-04-12-server-panel-rs-http.md  2026-04-12-server-panel-rs.md  2026-05-11-dns-cache-refactor.md
docs/superpowers/specs/: 2026-04-12-server-panel-rs-design.md  2026-05-11-dns-cache-refactor-design.md
src/: acl.rs  address.rs  api.rs  config.rs  config_auto.rs  error.rs  handler.rs  lib.rs  logger.rs  main.rs  net.rs  relay.rs  server_runner.rs  stats.rs  tls.rs  udp.rs  utils.rs  ws.rs
src/business/: auth.rs  mod.rs  stats.rs
src/business/api/: client.rs  mod.rs  tasks.rs  user_manager.rs
src/core/: connection.rs  dns.rs  hooks.rs  ip_filter.rs  mod.rs  protocol.rs  relay.rs  server.rs
src/grpc/: codec.rs  connection.rs  heartbeat.rs  mod.rs  transport.rs
src/transport/: mod.rs  tls.rs  ws.rs
src/transport/grpc/: codec.rs  connection.rs  heartbeat.rs  mod.rs  transport.rs
tests/: assert_passwd.rs
