[package]
name = "trojan-rs"
version = "0.1.6"
edition = "2021"

[dependencies]
tokio = { version = "1.49", features = ["full", "signal"] }
tokio-tungstenite = "0.28"
futures-util = "0.3"
sha2 = "0.10"
anyhow = "1.0"
bytes = "1.11"
hex = "0.4"
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
tokio-rustls = "0.26.4"
rustls = "0.23.36"
rustls-pemfile = "2.2.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
tonic = "0.14"
tokio-stream = "0.1.18"
futures = "0.3.31"
h2 = "0.4.13"
http = "1.4.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["tracing-log", "std", "local-time", "fmt", "ansi"] }
time = { version = "0.3", features = ["macros", "local-offset"] }
pin-project-lite = "0.2"
scopeguard = "1.2.0"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.15"
